name:                LambdaQuest
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/minoki/LambdaQuest#readme
license:             BSD3
license-file:        LICENSE
author:              ARATA Mizuki
maintainer:          minorinoki@gmail.com
copyright:           2017 ARATA Mizuki
category:            Language
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable LambdaQuest
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       LambdaQuest.SystemF,
                       LambdaQuest.SystemF.Type,
                       LambdaQuest.SystemF.PrettyPrint,
                       LambdaQuest.SystemF.Parse,
                       LambdaQuest.SystemF.TypeCheck,
                       LambdaQuest.SystemF.Eval
  build-depends:       base >= 4.7 && < 5, parsec, readline

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     LambdaQuest.SystemF,
                       LambdaQuest.SystemF.Type,
                       LambdaQuest.SystemF.PrettyPrint,
                       LambdaQuest.SystemF.Parse,
                       LambdaQuest.SystemF.TypeCheck,
                       LambdaQuest.SystemF.Eval
  ghc-options:         -Wincomplete-patterns
  build-depends:       base >= 4.7 && < 5, parsec
