name:                LambdaQuest
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/minoki/LambdaQuest#readme
license:             BSD3
license-file:        LICENSE
author:              ARATA Mizuki
maintainer:          minorinoki@gmail.com
copyright:           2017 ARATA Mizuki
category:            Language
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     LambdaQuest.SystemF,
                       LambdaQuest.SystemF.Type,
                       LambdaQuest.SystemF.PrettyPrint,
                       LambdaQuest.SystemF.Parse,
                       LambdaQuest.SystemF.TypeCheck,
                       LambdaQuest.SystemF.Eval,
                       -- LambdaQuest.SystemF.TypeRecon,
                       LambdaQuest.SystemFsub,
                       LambdaQuest.SystemFsub.Type,
                       LambdaQuest.SystemFsub.Subtype,
                       LambdaQuest.SystemFsub.PrettyPrint,
                       LambdaQuest.SystemFsub.Parse,
                       LambdaQuest.SystemFsub.TypeCheck,
                       LambdaQuest.SystemFsub.Eval,
                       LambdaQuest.SystemFsub.Coercion,
                       LambdaQuest.Finter,
                       LambdaQuest.Finter.Type,
                       LambdaQuest.Finter.Subtype,
                       LambdaQuest.Finter.PrettyPrint,
                       LambdaQuest.Finter.Parse,
                       LambdaQuest.Finter.TypeCheck,
                       LambdaQuest.Finter.Eval,
                       LambdaQuest.Common.Type,
                       LambdaQuest.Common.Parse,
                       LambdaQuest.Common.Parse.Number,
                       LambdaQuest.Simple.Type,
                       LambdaQuest.Simple.TypeCheck,
                       LambdaQuest.Simple.TypeRecon,
                       LambdaQuest.Simple.Parse,
                       LambdaQuest.LetPoly.Type,
                       LambdaQuest.LetPoly.TypeCheck,
                       LambdaQuest.LetPoly.Parse
  build-depends:       base >= 4.7 && < 5, parsec, mtl, containers
  ghc-options:         -Wincomplete-patterns

executable SystemF-repl
  hs-source-dirs:      src
  main-is:             SystemF-repl.hs
  default-language:    Haskell2010
  other-modules:       LambdaQuest.SystemF,
                       LambdaQuest.SystemF.Type,
                       LambdaQuest.SystemF.PrettyPrint,
                       LambdaQuest.SystemF.Parse,
                       LambdaQuest.SystemF.TypeCheck,
                       LambdaQuest.SystemF.Eval,
                       LambdaQuest.Common.Type,
                       LambdaQuest.Common.Parse,
                       LambdaQuest.Common.Parse.Number
  build-depends:       base >= 4.7 && < 5, parsec, readline
  ghc-options:         -Wincomplete-patterns

executable SystemFsub-repl
  hs-source-dirs:      src
  main-is:             SystemFsub-repl.hs
  default-language:    Haskell2010
  other-modules:       LambdaQuest.SystemFsub,
                       LambdaQuest.SystemFsub.Type,
                       LambdaQuest.SystemFsub.Subtype,
                       LambdaQuest.SystemFsub.PrettyPrint,
                       LambdaQuest.SystemFsub.Parse,
                       LambdaQuest.SystemFsub.TypeCheck,
                       LambdaQuest.SystemFsub.Eval,
                       LambdaQuest.SystemFsub.Coercion,
                       LambdaQuest.SystemF,
                       LambdaQuest.SystemF.Type,
                       LambdaQuest.SystemF.PrettyPrint,
                       LambdaQuest.SystemF.Parse,
                       LambdaQuest.SystemF.TypeCheck,
                       LambdaQuest.SystemF.Eval,
                       LambdaQuest.Common.Type,
                       LambdaQuest.Common.Parse,
                       LambdaQuest.Common.Parse.Number
  build-depends:       base >= 4.7 && < 5, parsec, readline
  ghc-options:         -Wincomplete-patterns

executable Finter-repl
  hs-source-dirs:      src
  main-is:             Finter-repl.hs
  default-language:    Haskell2010
  other-modules:       LambdaQuest.Finter,
                       LambdaQuest.Finter.Type,
                       LambdaQuest.Finter.Subtype,
                       LambdaQuest.Finter.PrettyPrint,
                       LambdaQuest.Finter.Parse,
                       LambdaQuest.Finter.TypeCheck,
                       LambdaQuest.Finter.Eval,
                       LambdaQuest.SystemFsub.Type,
                       LambdaQuest.SystemFsub.Subtype,
                       LambdaQuest.Common.Type,
                       LambdaQuest.Common.Parse,
                       LambdaQuest.Common.Parse.Number
  build-depends:       base >= 4.7 && < 5, parsec, readline
  ghc-options:         -Wincomplete-patterns

executable LetPoly-repl
  hs-source-dirs:      src
  main-is:             LetPoly-repl.hs
  default-language:    Haskell2010
  other-modules:       LambdaQuest.SystemF,
                       LambdaQuest.SystemF.Type,
                       LambdaQuest.SystemF.PrettyPrint,
                       LambdaQuest.SystemF.Parse,
                       LambdaQuest.SystemF.TypeCheck,
                       LambdaQuest.SystemF.Eval,
                       LambdaQuest.Common.Type,
                       LambdaQuest.Common.Parse,
                       LambdaQuest.Common.Parse.Number,
                       LambdaQuest.LetPoly.Type,
                       LambdaQuest.LetPoly.TypeCheck,
                       LambdaQuest.LetPoly.Parse,
                       LambdaQuest.LetPoly.PrettyPrint
  build-depends:       base >= 4.7 && < 5, parsec, readline, mtl, containers
  ghc-options:         -Wincomplete-patterns

test-suite SystemF-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       ParseSpec,
                       ChurchNumeralSpec,
                       ChurchListSpec,
                       SystemFsub.ParseSpec,
                       SystemFsub.ChurchNumeralSpec,
                       SystemFsub.ChurchListSpec,
                       SystemFsub.BoundedPolySpec
  build-depends:       base, LambdaQuest, hspec, QuickCheck
  default-language:    Haskell2010
